eventcore-macros/tests/ui/tuple_struct.stderr
error: EventCore: #[derive(Command)] requires named fields; tuple structs are not supported
 --> tests/ui/tuple_struct.rs:6:8
  |
6 | struct TupleCommand(#[stream] StreamId);
  |        ^^^^^^^^^^^^
